Crea Score y el tablero

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/konoha.png" type="image/png" />
+    <link rel="stylesheet" href="styles.css">
+    <script src="index.js" charset="utf-8"></script>
     <title>JS Memory Game by Ivancho175</title>
 </head>
 <body>
     
+    <h3>Score<span></span id="result"></span></h3>
+
+    <div class="grid">
+
+    </div>
+
+    <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
