Agrega footer, nuevo texto y enlace a CodePen

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         
         </div>
     </main>
+    <footer>
+        <p>
+          A sample of classic Memory game made with HTML, CSS and JavaScript.
+        </p>
+        <p>
+          &copy; Created by
+          <a href="https://codepen.io/ivancho175/" target="_blank"
+            >@ivancho175</a> <i class="fab fa-free-code-camp"></i
+          >
+        </p>
+    </footer>
     <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
