--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="./img/konoha.png" type="image/png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" charset="utf-8"></script>
     <title>JS Memory Game by Ivancho175</title>
 </head>
 <body>
@@ -36,5 +35,6 @@
         </p>
     </footer>
     <script src="index.js" charset="utf-8"></script>
+    <script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
