Test fix para gitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           >
         </p>
     </footer>
-    <script src="index.js" charset="utf-8"></script>
-    <script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./index.js" charset="utf-8"></script>
 </body>
 </html>
