Agrego enlace en el footer a My dev portfolio Pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <p>
           &copy; Created by
-          <a href="https://codepen.io/ivancho175/" target="_blank"
+          <a href="https://ivancho175.github.io/My-dev-portfolio/" target="_blank"
             >@ivancho175</a> <i class="fab fa-free-code-camp"></i
           >
         </p>
